2009-08-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Remove some redundant methods and add checks for
	attempts to use a null pointer to set bytes in the data.
	* Source/NSCharacterSet.m: Save mem with index set rather than bitmap set

2009-08-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m: Fix keyeded encodgin decoding for
	both NSAttributedString and NSMutableAttributedString.

2009-08-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Fix memory leak introduced with GC changes.
	* Source/Additions/GSMime.m: Use memmove() as fix for bug #27224

2009-08-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Fix memory leak introduced with GC changes.

2009-08-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m:
	* Headers/Foundation/NSFileManager.h:
	Updated comments/documentation to say that directory enumeration order
	is undefined.

2009-08-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m: Escape non-ascii characters etc in author.

2009-08-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: Fix for handling empty key values in
	XML property lists.

2009-08-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix error in memory allocation debug when
	swizzling a class.

2009-07-30  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/Foundation/Foundation.h: Included NSKeyValueObserving.h.

2009-07-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Correct the text in exception when attempting
	to read a response on an invalidated connection.
	* Source/Additions/GSMime.m:
	Fixup incorrect declaration of method in wrong class implementation.

2009-07-27  David Ayers  <ayers@fsfe.org>

	* Source/Additions/GSCompatibility.m ([-boolValue]): Only compile
	for OS X Versions below 10.5 and sync implementation with -base.
	Reported by: Georg Fleischmann
	
2009-07-23 Richard Frith-Macdonald <rfm@gnu.org>

	* GSHTTPURLHandle.m: